[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Spells/Punch.gd" type="Script" id=1]

[sub_resource type="SpatialMaterial" id=1]
flags_transparent = true
albedo_color = Color( 1, 0.247059, 0.247059, 0.380392 )

[sub_resource type="SphereMesh" id=2]
material = SubResource( 1 )

[sub_resource type="SphereShape" id=3]

[node name="Punch" type="Area"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0 )
visible = false
mesh = SubResource( 2 )
material/0 = null

[node name="TimeToLive" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0 )
shape = SubResource( 3 )
[connection signal="area_entered" from="." to="." method="_on_Punch_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Punch_body_entered"]
[connection signal="timeout" from="TimeToLive" to="." method="_on_TimeToLive_timeout"]
